Technical revision of ActionFX