@@ -32,7 +32,6 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Queue;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.github.actionfx.core.annotation.AFXNestedView;
@@ -564,10 +563,7 @@ public class NodeWrapper {
 				continue;
 			}
 			if (node.supportsMultipleChildren()) {
-				queue.addAll(node.getChildren().stream().map(NodeWrapper::of).map(wrapper -> {
-					childToParentMap.put(node, wrapper);
-					return wrapper;
-				}).collect(Collectors.toList()));
+				queue.addAll(node.getChildren().stream().map(NodeWrapper::of).peek(wrapper -> childToParentMap.put(node, wrapper)).toList());
 			} else if (node.supportsSingleChild()) {
 				final Property<Object> property = node.getSingleChildProperty();
 				if (property != null && property.getValue() != null) {
